--- a/assets/css/gateway.styl
+++ b/assets/css/gateway.styl
@@ -37,10 +37,13 @@ div.opening
 	text-align center
 	
 .gateway .play-now
+	display block
 	position relative
 	margin-left auto
 	margin-right auto
 	margin-top 35px
+	
+	text-align center
 
 .gateway .explorebtn
 	width 150px
